# pyside6-qml-stubgen

./: README.md  pyproject.toml  pyside6_qml_stubgen.py  requirements.txt
.github/workflows/: test.yml
pyside6_qml_stubgen/: __init__.py  __main__.py  dirty_file_detection.py  pyside_patching.py  qmlregistrar_types.py
tests/: test_run.py
tests/reference/: README
tests/reference/6.7.3/: README
tests/reference/6.8.3/: README
tests/reference/6.9.3/: README
