[project]
name = "pyside6-qml-stubgen"
description = "Generate QML stub files (.qmltypes) from Python modules (which use PySide6)"
authors = [{ name = "Matthew Joyce" }]
readme = "README.md"
dependencies = ["PySide6 >= 6.4", "docopt", "pydantic >= 2"]
requires-python = ">= 3.10"
keywords = ["qml", "type checking", "pyside6", "qt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/matsjoyce/pyside6-qml-stubgen"
Repository = "https://github.com/matsjoyce/pyside6-qml-stubgen.git"
Issues = "https://github.com/matsjoyce/pyside6-qml-stubgen/issues"

[project.scripts]
pyside6-qml-stubgen = "pyside6_qml_stubgen.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "mypy", "black", "types-docopt", "build", "pytest-cov"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pyside6_qml_stubgen/_version.py"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
show_error_codes = true
follow_imports = "silent"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
local_partial_types = true

[tool.black]
extend-exclude = "_version.py"
